# kronrodcpp

./: .gitignore  CMakeLists.txt  kronrod.cpp  kronrodT.hpp  kronrod_test_T.cpp  main.cpp
